style ~ fixed scrollbar width and dark mode nav background

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,7 @@
   @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
   ::-webkit-scrollbar {
     background: transparent;
-    width: 6px;
+    width: 3px;
   }
   ::-webkit-scrollbar-thumb {
     background: #41444384;
@@ -17,9 +17,9 @@
     font-size: clamp(14px, 5vw, 100px);
   }
 
-  @media screen and (min-width: 450px) {
+  @media screen and (min-width: 600px) {
     ::-webkit-scrollbar {
-      width: 4px;
+      width: 10px;
     }
   }
 }
